[gd_scene load_steps=8 format=3 uid="uid://eis5n410bmnl"]

[ext_resource type="Texture2D" uid="uid://bjcfcigfdrfex" path="res://addons/dialogic/Example Assets/backgrounds/green-field.png" id="1_it38k"]
[ext_resource type="Script" path="res://addons/dialogic/Editor/Settings/settings_layouts.gd" id="1_mdhmx"]
[ext_resource type="PackedScene" uid="uid://7mvxuaulctcq" path="res://addons/dialogic/Editor/Events/Fields/FilePicker.tscn" id="2_w32oh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4jru"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.545098, 0.545098, 0.545098, 0.211765)

[sub_resource type="Image" id="Image_1414h"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 93, 93, 55, 255, 97, 97, 58, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 98, 98, 47, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 94, 94, 46, 255, 93, 93, 236, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_c0m05"]
image = SubResource("Image_1414h")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ac2rv"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.0470588, 0.0470588, 0.0470588, 0.415686)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="SettingsLayouts" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mdhmx")

[node name="Title" type="Label" parent="."]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_y4jru")
text = "Layout Scene"

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="HBox/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="HBox/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Mode"

[node name="LayoutMode" type="OptionButton" parent="HBox/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "Preset"
popup/item_0/id = 0
popup/item_1/text = "Custom"
popup/item_1/id = 1
popup/item_2/text = "No scene"
popup/item_2/id = 2

[node name="PresetScene" type="HBoxContainer" parent="HBox/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="HBox/VBox/PresetScene"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Preset"

[node name="PresetSceneLabel" type="Label" parent="HBox/VBox/PresetScene"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Name of scene"
horizontal_alignment = 2
clip_text = true

[node name="PresetSelectionButton" type="Button" parent="HBox/VBox/PresetScene"]
unique_name_in_owner = true
layout_mode = 2
text = "Change"

[node name="CustomScene" type="HBoxContainer" parent="HBox/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="HBox/VBox/CustomScene"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Scene"

[node name="CustomScenePicker" parent="HBox/VBox/CustomScene" instance=ExtResource("2_w32oh")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder = "DialogicDefaultScene.tscn"
resource_icon = SubResource("ImageTexture_c0m05")

[node name="TestingScene" type="HBoxContainer" parent="HBox/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="HBox/VBox/TestingScene"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Editor testing"

[node name="TestingScenePicker" parent="HBox/VBox/TestingScene" instance=ExtResource("2_w32oh")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder = "DialogicDefaultScene.tscn"
resource_icon = SubResource("ImageTexture_c0m05")

[node name="ScrollContainer" type="ScrollContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.7
text = "A) Select a preset and start customizig it. B) If the provided options are not enough, create a copy of the preset scene that you can edit like any godot scene.

C) You can also create a scene from scratch using godot and the dialogic nodes.

D) If you have integrated the dialogic nodes directly into your UI, use Dialogic.start_timeline() and set the mode to \"No scene\"."
autowrap_mode = 3

[node name="PresetSelection" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ac2rv")

[node name="VBoxContainer2" type="VBoxContainer" parent="PresetSelection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PremadesTitle" type="Label" parent="PresetSelection/VBoxContainer2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_y4jru")
text = "Select a preset"

[node name="LayoutItemList" type="ItemList" parent="PresetSelection/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
max_columns = 8
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2i(100, 100)

[node name="VBoxContainer" type="HBoxContainer" parent="PresetSelection/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviewImage" type="TextureRect" parent="PresetSelection/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_it38k")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PresetSelection/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviewTitle" type="Label" parent="PresetSelection/VBoxContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Preview title"
uppercase = true

[node name="PreviewDescription" type="Label" parent="PresetSelection/VBoxContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "A default layout, similar to dialogic 1. 
Supports all standard dialogic events. "
autowrap_mode = 3

[node name="HBox" type="HBoxContainer" parent="PresetSelection/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ActivateButton" type="Button" parent="PresetSelection/VBoxContainer2/VBoxContainer/VBoxContainer/HBox"]
layout_mode = 2
size_flags_vertical = 0
text = "Select this preset"

[node name="PresetCustomization" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="TitleLabel4" type="Label" parent="PresetCustomization"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_y4jru")
text = "Preset customization"

[node name="ClearCustomization" type="Button" parent="PresetCustomization/TitleLabel4"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
flat = true

[node name="ExportsTabs" type="TabContainer" parent="PresetCustomization"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="HBox/VBox/PresetScene/PresetSelectionButton" to="." method="_on_preset_selection_pressed"]
[connection signal="pressed" from="PresetSelection/VBoxContainer2/VBoxContainer/VBoxContainer/HBox/ActivateButton" to="." method="_on_activate_button_pressed"]
[connection signal="pressed" from="PresetCustomization/TitleLabel4/ClearCustomization" to="." method="_on_clear_customization_pressed"]
